@@ -268,6 +268,8 @@ public interface MaskingLibrary extends CMLibrary
 		RACECAT("+RACECATS"),
 		_CLAN("-CLANS"),
 		CLAN("+CLANS"),
+		_CLANLEVEL("-CLANLEVELS"),
+		CLANLEVEL("+CLANLEVELS"),
 		_ANYCLASS("-ANYCLASSES"),
 		ANYCLASS("+ANYCLASSES"),
 		_ANYCLASSLEVEL("-ANYCLASSLEVELS"),
